samples/_failures_safe/1761070589_80863c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bea8179e.c: In function ‘main’:
./samples/SAFE/__tmp_bea8179e.c:159:29: error: missing terminating " character
  159 |             fprintf(stderr, "Failed to add transition\n
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bea8179e.c:159:13: error: expected expression at end of input
  159 |             fprintf(stderr, "Failed to add transition\n
      |             ^~~~~~~
./samples/SAFE/__tmp_bea8179e.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bea8179e.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bea8179e.c:159:13: error: expected declaration or statement at end of input
